# Memocore

./: .env.example  .gitignore  README.md  pyproject.toml
docs/design/: design-doc-v0.1.md
docs/superpowers/plans/: 2026-04-03-memos-kickoff.md
examples/aoxia_demo/: test_connection.py
memocore/: .env.example  __init__.py
memocore/adapters/bridge/: bridge_read.py  bridge_write.py
memocore/adapters/claude_code/: mid_session_hook.py  prompt_hook.py  stop_hook.py
memocore/adapters/mcp/: server.py
memocore/agents/: __init__.py  registry.py
memocore/agents/aoxia/: schema.py
memocore/agents/default/: __init__.py  schema.py
memocore/cli/: main.py
memocore/core/: __init__.py  config.py  dream.py  embedder.py  extractor.py  graphiti_factory.py  llm_adapter.py  locale.py  privacy.py  retriever.py
memocore/lite/: README.md  __init__.py  bridge_adapter.py  import_files.py  import_flying_shrimp.py  import_multi_agent.py  snapshot.py  store.py
memos/: __init__.py
memos/adapters/bridge/: bridge_write.py
memos/adapters/claude_code/: prompt_hook.py  stop_hook.py
memos/agents/aoxia/: __init__.py
memos/core/: __init__.py  dream.py  extractor.py  retriever.py
tests/: conftest.py  test_config.py  test_dream_report.py  test_llm_adapter.py  test_locale.py  test_privacy.py  test_registry.py
