[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "memocore"
version = "0.1.0"
description = "Agent universal memory layer — powered by Graphiti"
requires-python = ">=3.10"
dependencies = [
    "graphiti-core>=0.3",
    "neo4j>=5.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "anthropic>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["memocore*"]
