[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "memocore"
version = "0.1.0"
description = "Agent universal memory layer — powered by Graphiti"
requires-python = ">=3.10"
dependencies = [
    "graphiti-core>=0.3",
    "neo4j>=5.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "click>=8.0",        # CLI 工具
    # LLM provider（至少安装一个）
    "anthropic>=0.20",   # 推荐；用于 LLM 提炼、rerank、Dream consolidate
    "openai>=1.0",       # 备选；也是 Graphiti 默认 embedding provider
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

# 本地 embedding（无需 OpenAI key）
local-embed = ["fastembed>=0.2"]
local-embed-torch = ["sentence-transformers>=2.0"]

# MCP Server - stdio 模式（兼容 Claude Desktop / Cursor / Windsurf）
mcp = ["mcp[cli]>=1.0"]

# MCP Server - HTTP 模式（企业多租户服务）
mcp-http = ["mcp[cli]>=1.0", "uvicorn[standard]>=0.29"]

# 全功能安装
all = ["fastembed>=0.2", "mcp[cli]>=1.0", "uvicorn[standard]>=0.29"]

[project.scripts]
memocore = "memocore.cli.main:main"
memocore-mcp = "memocore.adapters.mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memocore*"]
